<resources>
    <string name="app_name">NoteTools</string>
    <string name="sharedFirstBoot">shared-first-boot</string>
    <string name="sharedLoginId">shared-login-id</string>
    <string name="sharedSplashScreen">shared-show-splash</string>
    <string name="sharedPortraitMode">shared-portrait-mode</string>
    <string name="pref_ringtone_silent">silent</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="InvalidValidation">Este campo es obligatorio</string>
    <string name="back">Regresar</string>
    <string name="next">Continuar</string>
    <string name="advance_options">Opciones Avanzadas</string>
    <string name="default_text">Lorem ipsum</string>
    <string name="default_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="register_user_nurse">Registro de usuarios temporales\nAuxiliar de enfermeria</string>
    <string name="create_user_note"><![CDATA[<strong>NOTA:</strong> Al crear su <strong>usuario</strong> podrá registrar notas <strong>localmente</strong>, sin embargo es necesario <strong>validar</strong> su <strong>asignación</strong> para el envío de la información ]]>
    </string>
    <string name="label_info">12 m</string>
    <string name="image_info">image_info</string>
    <string name="create_name_user">Nombre y Apellidos:</string>
    <string name="create_user">Usuario:</string>
    <string name="example_user">ejemplousuario123</string>
    <string name="create_password">Contraseña:</string>
    <string name="create_password_alter">*******</string>
    <string name="verification_code">Codigo de verificación</string>
    <string name="defaut_verification_code">000-0000000</string>
    <string name="tittle_dialog_login">Iniciar Sesión</string>
    <string name="default_preferences">DefaultPreferences</string>
</resources>
